--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -2,8 +2,8 @@ include your HTML opening tags
 and your hidden "head" tag
 and your "title" tag
 
-
-full-width wrapper div
+<body>
+  full-width wrapper div
   header containing: YOUR NAME's Labs For INST377
   container div
       left div
@@ -18,3 +18,4 @@ full-width wrapper div
 
 
 full-width page footer containing your github account name and a link to your gitHub account
+</body>
