--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,11 +1,30 @@
-include your HTML opening tags
-and your hidden "head" tag
-and your "title" tag
 
-<body>
-  full-width wrapper div
-  header containing: YOUR NAME's Labs For INST377
-  container div
+<html lang="en">
+<head>
+  <title>Melissa Kavege INST377 labs</title>
+</head>
+<body> 
+  
+  <div>
+    <header><h1>Melissa kavege's labs for INST377 </h1></header>
+  </div>
+  <div>
+    <div><header><h3>Album Names</h3></div>
+      <ol>
+        <li>Raves and roses</li>
+        <li>Slime language</li>
+        <li>Nothing was the same</li>
+        <li>Head in clouds</li>
+        <li>SOS</li>
+      </ol>
+    <div><header><h2>Image carousel</h2></header></div>
+  </div>
+  <div>
+  <footer><a href="http://github.com/UMD INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
+  </div>
+</body>
+</html>
+container div
       left div
         sub-header saying "albums"
         Your top 5 albums in an ordered list
@@ -18,4 +37,3 @@ and your "title" tag
 
 
 full-width page footer containing your github account name and a link to your gitHub account
-</body>
