--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Melissa Kavege INST377 labs</title>
@@ -18,6 +18,12 @@
         <li>SOS</li>
       </ol>
     <div><header><h2>Image carousel</h2></header></div>
+  </div>
+  <div>
+    <a>images</a>
+  </div>
+  <div>
+    <p> This is 4 mochi emojis from the links and images reading</p>
   </div>
   <div>
   <footer><a href="http://github.com/UMD INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
