--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -26,15 +26,11 @@
     <p> This is 4 mochi emojis from the links and images reading</p>
   </div>
   <div>
-  <footer><a href="http://github.com/UMD INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
+  <footer><a href="http://github.com/UMD-INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
   </div>
 </body>
 </html>
-container div
-      left div
-        sub-header saying "albums"
-        Your top 5 albums in an ordered list
-      right div (main div for the site)
+
         sub-header saying "image carousel"
           div to contain four images
             four images of mochi from your readings, all square (they're four different image types!)
@@ -42,4 +38,3 @@ container div
             description of images
 
 
-full-width page footer containing your github account name and a link to your gitHub account
