--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -20,7 +20,11 @@
     <div><header><h2>Image carousel</h2></header></div>
   </div>
   <div>
-    <a>images</a>
+    <img src="mochi.gif"> 
+    <img src="mochi.jpg">
+    <img src="mochi.png">
+    <img src="mochi.svg"
+
   </div>
   <div>
     <p> This is 4 mochi emojis from the links and images reading</p>
@@ -31,10 +35,6 @@
 </body>
 </html>
 
-        sub-header saying "image carousel"
-          div to contain four images
-            four images of mochi from your readings, all square (they're four different image types!)
-          div to contain a description or text
-            description of images
+
 
 
