--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -29,8 +29,7 @@
     <p> This is 4 mochi emojis from the links and images reading</p>
   </div>
   <div>
-    <p>Melissa Kavege INTS377</p>
-  <footer><a href="http://github.com/UMD-INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
+    <p>Melissa Kavege INTS377</p><footer><a href="http://github.com/UMD-INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
   </div>
 </body>
 </html>
