--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,10 +1,38 @@
-Replace this with your complete HTML from Lab 1
-
-Hook it up to CSS by including style.css in the <head> tag
-
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
-
-You should not need to edit the CSS to do this, only the HTML.
-
-Don't forget to add an actual set of image descriptions to your image carousel.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Melissa Kavege INST377 labs</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body> 
+  
+  <div class="wrapper">
+    <header class="Header"><h1>Melissa kavege's labs for INST377 </h1></header>
+  </div >
+  <div class="container">
+    <div class ="left_section box">
+        <h3>Album Names</h3></div>
+      <ol>
+        <li>Raves and roses</li>
+        <li>Slime language</li>
+        <li>Nothing was the same</li>
+        <li>Head in clouds</li>
+        <li>SOS</li>
+      </ol>
+    <divclass class="right_section box">
+        <h2>Image carousel</h2></header></div>
+  </div>
+  <div>
+    <img src="mochi.gif" alt="Mochi ball1"> 
+    <img src="mochi.jpg" alt="Mochi ball2.0">
+    <img src="mochi.png" alt="Mochi ball3">
+    <img src="mochi.svg" alt="Mochi ball4">
+  </div>
+  <div>
+    <p> This is 4 mochi emojis from the links and images reading</p>
+  </div>
+  <div>
+    <p>Melissa Kavege INTS377</p><footer class="footer"><a href="http://github.com/UMD-INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
+  </div>
+</body>
+</html>
