--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -7,7 +7,8 @@
 <body> 
   
   <div class="wrapper">
-    <header class="Header"><h1>Melissa kavege's labs for INST377 </h1></header>
+  <div> 
+    <header class="header"><h1>Melissa kavege's labs for INST377 </h1></header>
   </div >
   <div class="container">
     <div class ="left_section box">
@@ -34,5 +35,6 @@
   <div>
     <p>Melissa Kavege INTS377</p><footer class="footer"><a href="http://github.com/UMD-INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
   </div>
+</div>
 </body>
 </html>
