--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -12,29 +12,30 @@
   </div >
   <div class="container">
     <div class ="left_section box">
-        <h3>Album Names</h3></div>
-      <ol>
-        <li>Raves and roses</li>
-        <li>Slime language</li>
-        <li>Nothing was the same</li>
-        <li>Head in clouds</li>
-        <li>SOS</li>
-      </ol>
-    <divclass class="right_section box">
-        <h2>Image carousel</h2></header></div>
+        <h3>Album Names</h3>
+        <ol class="box">
+          <li>Raves and roses</li>
+          <li>Slime language</li>
+          <li>Nothing was the same</li>
+          <li>Head in clouds</li>
+          <li>SOS</li>
+        </ol>    
+    </div>
+
+    <div class="right_section box">
+        <h2>Image carousel</h2></header>
+        <div class="grid">
+          <img src="images/mochi.gif" alt="Mochi gif"> 
+          <img src="images/mochi.jpg" alt="Mochi jpg">
+          <img src="images/mochi.png" alt="Mochi png">
+          <img src="images/mochi.svg" alt="Mochi svg">
+        </div>
+        <div class="box">
+          <p> This is 4 mochi emojis from the links and images reading</p>
+        </div>
+    </div>
   </div>
-  <div>
-    <img src="mochi.gif" alt="Mochi ball1"> 
-    <img src="mochi.jpg" alt="Mochi ball2.0">
-    <img src="mochi.png" alt="Mochi ball3">
-    <img src="mochi.svg" alt="Mochi ball4">
-  </div>
-  <div>
-    <p> This is 4 mochi emojis from the links and images reading</p>
-  </div>
-  <div>
-    <p>Melissa Kavege INTS377</p><footer class="footer"><a href="http://github.com/UMD-INST377" target="_blank" rel="noopener noreferrer">UMD INST377 </a></footer>
-  </div>
+  <footer class="footer">Melissa Kavege Repo:<a href="https://github.com/melissakavege/INST377-Lab-Work" target="_blank">melissakavege</a></footer>
 </div>
 </body>
 </html>
