--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,5 +1,45 @@
-<!--
-    Replace this with your working code from Lab 2, and include:
-    - The styles in this folder's `style.css`
-    - The script in script.js, which should be included via a `<script src="script.js" >` call before your closing </body> tag 
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Melissa Kavege INST377 labs</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body> 
+  
+  <div class="wrapper">
+  <div> 
+    <header class="header"><h1>Melissa kavege's labs for INST377 </h1></header>
+  </div >
+  <div class="container">
+    <div class ="left_section box">
+        <h3>Album Names</h3>
+        <ol class="box">
+          <li>Raves and roses</li>
+          <li>Slime language</li>
+          <li>Nothing was the same</li>
+          <li>Head in clouds</li>
+          <li>SOS</li>
+        </ol>    
+    </div>
+
+    <div class="right_section box">
+        <h2>Image carousel</h2></header>
+        <div class="carousel">
+          <button class="prev">prev</button>
+          <div class="slides">
+            <div class="carosuel_item visible"><img src="images/toki 1.jpg" alt="toki jpg 1"></div>
+            <div class="carosuel_item hidden"></div><img src="images/toki2.PNG" alt="toki png"></div>
+            <div class="carosuel_item hidden"></div><img src="images/toki3.jpg" alt=" toki jpg 2"></div>
+            <div class="carosuel_item hidden"></div><img src="images/toki4.jpg" alt="toki jpg 3"></div>
+          </div>
+          <button class="next">next</button>
+        </div>
+        <div class="box">
+          <p> This is my cat whom I love!</p>
+        </div>
+    </div>
+  </div>
+  <footer class="footer">Melissa Kavege Repo:<a href="https://github.com/melissakavege/INST377-Lab-Work" target="_blank">melissakavege</a></footer>
+</div>
+</body>
+</html>
