--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -12,22 +12,21 @@
             <h1> Melissa kavege labs for int377</h1>
         </header>
         <div class="container">
-            <div class="left_section"></div>
-            <h3>Form input</h3>
-            <form action="/api">
-                <label for="resto"></label>
-                <input type="text" id="resto">
-                <button type="submit">Submit</button>
-            </form>
+            <div class="left_section">
+                <h3>Form input</h3>
+                <form action="/api">
+                    <label for="resto"></label>
+                    <input type="text" id="resto">
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
             <div class="right_section">
-                <h3> Local Restaurants</h3>
-                <div class="restaurant_list">
-                    A list of local restaurants
+                <h3>Local Restaurants</h3>
+                <div class="restaurant_list">A list of local restaurants</div>
                 </div>
-        </div> 
-        <footer class="footer">Melissa Kavege Repo:<a href="https://github.com/melissakavege/INST377-Lab-Work" target="_blank">melissakavege</a></footer> 
-    </div>
-</body>
+            </div> 
+        </div>
+    </body>
 </html>
 <!-- Bring in your successful HTML/CSS from the Flexbox lab -->
 <!-- Try typing 'doc' at the top of this file and pressing "tab" -->
