--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -1,9 +1,46 @@
-<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
-<!-- Your page will need a form in it, but that form will not need an action
-    You will need to add the attribute "name" to your input
-    with a value of 'resto'
+<html lang="en">
+    <head>
+    <meta charset="UTF-8" /> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content ="width=device-width, initial-scale-1.0" /> 
+    <title>Melissa kavege INST377 Labs</title>
+    </head>
+<body>
+    <div class="wrapper">
+        <header class="header"><h1>Melissa's Labs For INST377</h1></header>
+        <!-- wrapper -->
+        <div class="container"> 
+        <!-- container -> 
+        <div class="left_section box">
+        <!-left inputs -->
+        <h2>Form Inputs</h2> 
+        <form
+            action="https://data.princegeorgescountymd.gov/resource/umjn-t21z.json"
+            class="box"
+        >
+        <div>
+            <label for = " resto">Restaurast Names</label>
+            <input types="text" id="resto"/> 
+            </div>
+            <button type="submit">Load Data</button>
+            <button type="filter"> Filter Data</Datal></button>
+        </form>
+        </div>
+        <div class="right_section box">
+            <!-- right side-->
+            <!-- images box-->
+            <h2>Local Restaurant List</h2>
 
-    You will need to hook your script.js to this file for the midterm to work
-    you will need a "filter" button with a type of "button" and a
-    "load data" button with a type of "submit" on it
--->
+            <div class="box" id="restaurant_list">
+                <!--description box-->
+                A list of restarants from API 
+            </div>
+        </div>
+    </div>
+    <footer class="footer">Melissa Kavege Repo:
+        <a href="https://github.com/melissakavege/INST377-Lab-Work" target="_blank">melissakavege</a>
+        </footer>
+    </div>
+    <script src="./script.js"></script>
+  </body>
+  </html>
