--- a/client/lab_7/index.html
+++ b/client/lab_7/index.html
@@ -30,14 +30,14 @@
             <!-- right side-->
             <!-- images box-->
             <h2>Local Restaurant List</h2>
-
             <div class="box" id="restaurant_list">
                 <!--description box-->
                 A list of restarants from API 
             </div>
         </div>
     </div>
-    <footer class="footer">Melissa Kavege Repo:
+    <footer class="footer">
+        Melissa Kavege Repo:
         <a href="https://github.com/melissakavege/INST377-Lab-Work" target="_blank">melissakavege</a>
         </footer>
     </div>
